--- a/slidingwindows/assets/slidingwindows/lang/en.json
+++ b/slidingwindows/assets/slidingwindows/lang/en.json
@@ -26,11 +26,15 @@
   "slidingwindows:block-sliding-window-wc-leaded-*":  "Leaded single-hung glass window",
 
   "slidingwindows:handbook-sliding-deprecated-desc": "This recipe is no longer available.",
-  
+
+  "slidingwindows:handbook-generic-recipe-title": "Craftable variants",
+  "slidingwindows:handbook-generic-recipe-text": "All types of wood and glass are permitted, but to simplify handbook organization, only one variant recipe is displayed above.",
+  "slidingwindows:handbook-sliding-title": "Interactions",
   "slidingwindows:handbook-sliding-y-desc": "Vertically sliding glass windows: The bottom sash moves up and down; the top sash is fixed.",
   "slidingwindows:handbook-sliding-x-desc": "Horizontally sliding windows/doors: The side with the handle moves left to right; the other side is fixed.",
   "slidingwindows:handbook-fixed-desc": "Fixed windows are used in multi-sash sliding window recipes.",
-
+ 
+  "slidingwindows:handbook-sliding-2x1-y":  "Glass sliding 2x1 window",
   "slidingwindows:block-sliding-2x1-y-plain-*":   "Plain sliding 2x1 window",
   "slidingwindows:block-sliding-2x1-y-smoky-*":   "Smoky sliding 2x1 window",
   "slidingwindows:block-sliding-2x1-y-quartz-*":  "Quartz sliding 2x1 window",
@@ -71,6 +75,7 @@
   "slidingwindows:block-sliding-3x1-y-brown-*":   "Brown sliding 3x1 window",
   "slidingwindows:block-sliding-3x1-y-leaded-*":  "Leaded sliding 3x1 window",
 
+  "slidingwindows:handbook-sliding-2x2-x":  "Glass sliding 2x2 door",
   "slidingwindows:block-sliding-2x2-x-plain-*":   "Plain sliding 2x2 door",
   "slidingwindows:block-sliding-2x2-x-smoky-*":   "Smoky sliding 2x2 door",
   "slidingwindows:block-sliding-2x2-x-quartz-*":  "Quartz sliding 2x2 door",
